--- a/PantallasJuntas/local.properties
+++ b/PantallasJuntas/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Aug 26 13:10:47 CST 2024
-sdk.dir=C\:\\Users\\Jorge\\AppData\\Local\\Android\\Sdk
+#Tue Sep 03 00:24:18 CST 2024
+sdk.dir=C\:\\Users\\axeli\\AppData\\Local\\Android\\Sdk
