--- a/LegalMatch/gradle/libs.versions.toml
+++ b/LegalMatch/gradle/libs.versions.toml
@@ -20,6 +20,8 @@ appcompat = "1.7.0"
 okhttp = "4.11.0"
 material3 = "1.3.0"
 roomCommon = "2.6.1"
+googleid = "1.1.1"
+fragment = "1.5.4"
 
 
 [libraries]
@@ -47,6 +49,8 @@ kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-c
 material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
 androidx-room-common = { group = "androidx.room", name = "room-common", version.ref = "roomCommon" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+googleid = { group = "com.google.android.libraries.identity.googleid", name = "googleid", version.ref = "googleid" }
+androidx-fragment = { group = "androidx.fragment", name = "fragment", version.ref = "fragment" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
